Clean up runner Main.scala even more